# libshared-example

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  shared.c  shared.h  testprint.c
debian/: changelog  control  copyright  rules
debian/patches/: 00list  versioned-symbol.dpatch
tests/: testprint.sh
